<resources>
    <string name="app_name">Tomato List</string>
    <string name="hello_john_doe">Hello John Doe!</string>
    <string name="welcome_back">Dashboard</string>
    <string name="notes">Study Time!</string>
    <string name="card_text">Looks like there\'s a few things that you need to finish. Are you ready to work on them?</string>
    <string name="button_card_text">Go To Pomodoro Timer</string>
    <string name="tasks">Tasks</string>
    <string name="login_title">Tomato List</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="add_tasks">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="enter_date">Deadline</string>
    <string name="text_description">Write down your descripiton here...</string>
    <string name="submit">Submit</string>
    <string name="deadlineHeader">Deadline:</string>
    <string name="description">Description:</string>
    <string name="template">TextView</string>
    <string name="update">Update</string>
    <string name="update_task">Update Task</string>

    <string-array name="array_date_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="array_date_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="array_date_year">
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
</resources>