<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/view_task_bg"
    android:id="@+id/mainLl">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskHeaderTv"
        android:text="TextView"
        android:textSize="44sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadlineHeader"
            android:textSize="18sp"
            android:id="@+id/dateTextTv" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deadlineTv"
            android:text="@string/template"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionHeaderTv"
        android:paddingTop="30dp"
        android:textSize="18sp"
        android:text="@string/description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionTextTv"
        android:paddingTop="10dp"
        android:text="@string/template"
        android:textSize="18sp"/>
</LinearLayout>